--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -58,7 +58,11 @@ input[type=text]::placeholder, input[type=password]::placeholder {
   color: #aaa;
 }
 input[type=text]:focus-visible, input[type=password]:focus-visible {
-  outline-color: #273138;
+  outline: auto !important;
+}
+input[type=text].error, input[type=password].error {
+  outline: auto;
+  outline-color: #E95A45 !important;
 }
 
 header {
@@ -109,20 +113,16 @@ main.log-in_sign-up form {
   display: grid;
   gap: 1rem;
 }
-main.log-in_sign-up form button {
-  font-size: 1rem;
-  padding: 1.25rem 1.5rem;
-}
-main.log-in_sign-up .not-a-robot {
+main.log-in_sign-up form .not-a-robot {
   padding-bottom: 0.75rem;
 }
-main.log-in_sign-up .not-a-robot label {
+main.log-in_sign-up form .not-a-robot label {
   cursor: pointer;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
-main.log-in_sign-up .not-a-robot label .checkbox {
+main.log-in_sign-up form .not-a-robot label .checkbox {
   position: relative;
   width: 1rem;
   height: 1rem;
@@ -130,25 +130,36 @@ main.log-in_sign-up .not-a-robot label .checkbox {
   border: 0.0625rem solid #e7e8ec;
   border-radius: 0.25rem;
 }
-main.log-in_sign-up .not-a-robot label .checkbox::before {
+main.log-in_sign-up form .not-a-robot label .checkbox::before {
   content: "";
   position: absolute;
   inset: 0.125rem;
   border-radius: 0.125rem;
 }
-main.log-in_sign-up .not-a-robot label span {
+main.log-in_sign-up form .not-a-robot label span {
   font-size: 0.975rem;
 }
-main.log-in_sign-up .not-a-robot input[type=checkbox] {
+main.log-in_sign-up form .not-a-robot input[type=checkbox] {
   opacity: 0;
   position: absolute;
   pointer-events: none;
 }
-main.log-in_sign-up .not-a-robot input[type=checkbox]:checked + label .checkbox::before {
+main.log-in_sign-up form .not-a-robot input[type=checkbox]:checked + label .checkbox::before {
   background: #273138;
 }
-main.log-in_sign-up .not-a-robot input[type=checkbox]:focus-visible + label .checkbox {
+main.log-in_sign-up form .not-a-robot input[type=checkbox]:focus-visible + label .checkbox {
   outline: auto;
+}
+main.log-in_sign-up form .error-message {
+  color: #E95A45;
+  font-size: 0.9rem;
+}
+main.log-in_sign-up form .error-message.hidden {
+  display: none;
+}
+main.log-in_sign-up form button {
+  font-size: 1rem;
+  padding: 1.25rem 1.5rem;
 }
 main.log-in_sign-up .sing-up-link {
   text-align: center;
