--- a/client/src/assets/style/pages/log-in_sign-up/_log-in_sign-up.scss
+++ b/client/src/assets/style/pages/log-in_sign-up/_log-in_sign-up.scss
@@ -9,43 +9,50 @@ main.log-in_sign-up{
   form{
     display: grid;
     gap: 1rem;
+
+    .not-a-robot{
+      padding-bottom: .75rem;
+      label{
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+        .checkbox{
+          position: relative;
+          width: 1rem;
+          height: 1rem;
+          background: #fff;
+          border: $border;
+          border-radius: .25rem;
+          &::before{
+            content: '';
+            position: absolute;
+            inset: .125rem;
+            border-radius: .125rem;
+          }
+        }
+        span{
+          font-size: .975rem;
+        }
+      }
+      input[type=checkbox]{
+        opacity: 0;
+        position: absolute;
+        pointer-events: none;
+        &:checked + label .checkbox::before{ background: $primary; }
+        &:focus-visible + label .checkbox{ outline: auto; }
+      }
+    }
+
+    .error-message{
+      &.hidden{ display: none; }
+      color: $error;
+      font-size: .9rem;
+    }
+
     button{
       font-size: 1rem;
       padding: 1.25rem 1.5rem;
-    }
-  }
-
-  .not-a-robot{
-    padding-bottom: .75rem;
-    label{
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: .5rem;
-      .checkbox{
-        position: relative;
-        width: 1rem;
-        height: 1rem;
-        background: #fff;
-        border: $border;
-        border-radius: .25rem;
-        &::before{
-          content: '';
-          position: absolute;
-          inset: .125rem;
-          border-radius: .125rem;
-        }
-      }
-      span{
-        font-size: .975rem;
-      }
-    }
-    input[type=checkbox]{
-      opacity: 0;
-      position: absolute;
-      pointer-events: none;
-      &:checked + label .checkbox::before{ background: $primary; }
-      &:focus-visible + label .checkbox{ outline: auto; }
     }
   }
 
