--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -4,7 +4,7 @@
   margin: 0;
 }
 
-body {
+.content {
   background: #FBFCFD;
 }
 
@@ -26,6 +26,42 @@ a {
   padding-inline: var(--wrapper-padding-inline);
 }
 
+body {
+  background: #fff;
+  overflow-y: hidden;
+}
+
+.content {
+  overflow-y: auto;
+  position: relative;
+  max-height: 100vh;
+  transition: 0.2s;
+}
+.content.menu-opened {
+  overflow-y: hidden;
+  transform: scale(0.7) translateX(70%);
+  border-radius: 2rem;
+}
+.content.menu-opened * {
+  pointer-events: none;
+}
+.content.menu-opened:not(.bg-card) {
+  border: 0.0625rem solid #e7e8ec;
+}
+.content.bg-card {
+  position: fixed;
+  top: 0;
+  z-index: -1000;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  transform: scale(0.9);
+}
+.content.bg-card.menu-opened {
+  background: rgba(0, 0, 0, 0.04);
+  transform: scale(0.6) translateX(65%);
+}
+
 button {
   background: none;
   border: none;
@@ -36,7 +72,7 @@ button {
   border-radius: 100vmax;
   font-size: 0.96rem;
   font-weight: 500;
-  padding: 1.25rem 1.75rem;
+  padding: 1rem 1.75rem;
 }
 .btn:not(.outline, .transparent) {
   background: #273138;
@@ -73,12 +109,61 @@ header {
 }
 header .logo {
   font-size: 1.25rem;
-  font-weight: 600;
+  font-weight: 700;
   margin-right: auto;
 }
 header .account-btns {
   display: flex;
-  gap: 0.5rem;
+}
+
+.menu-btn {
+  cursor: pointer;
+  position: fixed;
+  top: 2.234375rem;
+  right: var(--wrapper-padding-inline);
+  transform: translateY(-50%);
+  z-index: 1000;
+  width: 3rem;
+  height: 3rem;
+  padding: 0.75rem;
+}
+.menu-btn .lines-cont {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+.menu-btn .line {
+  width: 100%;
+  height: 0.15rem;
+  background: #273138;
+  border-radius: 100vmax;
+}
+.menu-btn .line:nth-child(1) {
+  transition: transform 0.2s, margin 0.2s;
+  margin-bottom: 0.25rem;
+}
+.menu-btn .line:nth-child(2) {
+  transition: width 0s, transform 0.2s;
+  width: 80%;
+}
+.menu-btn:not(.menu-opened) .line:nth-child(1) {
+  transition-delay: 0s, 0.2s;
+}
+.menu-btn:not(.menu-opened) .line:nth-child(2) {
+  transition-delay: 0.2s, 0s;
+}
+.menu-btn.menu-opened .line:nth-child(1) {
+  transform: rotate(-45deg);
+  transition-delay: 0.2s, 0s;
+  margin-bottom: -0.125rem;
+}
+.menu-btn.menu-opened .line:nth-child(2) {
+  width: 100%;
+  transition-delay: 0.2s;
+  transform: rotate(45deg);
 }
 
 main.home .posts {
