--- a/client/src/assets/style/ui/_layout.scss
+++ b/client/src/assets/style/ui/_layout.scss
@@ -5,3 +5,35 @@
 .wrapper{
   padding-inline: var(--wrapper-padding-inline);
 }
+
+body{
+  background: #fff;
+  overflow-y: hidden;
+}
+
+.content{
+  overflow-y: auto;
+  position: relative;
+  max-height: 100vh;
+  transition: $transition;
+  &.menu-opened{
+    *{ pointer-events: none; }
+    overflow-y: hidden;
+    transform: scale(.7) translateX(70%);
+    border-radius: 2rem;
+    &:not(.bg-card){ border: $border; }
+  }
+  &.bg-card{
+    position: fixed;
+    top: 0;
+    z-index: -1000;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    transform: scale(.9);
+    &.menu-opened{
+      background: rgb(#000, .04);
+      transform: scale(.6) translateX(65%);
+    }
+  }
+}
