--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -8,50 +8,52 @@
   width: 3rem;
   height: 3rem;
   padding: .75rem;
+
   .lines-cont{
     width: 100%;
     height: 100%;
     display: flex;
     flex-flow: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
   }
+
   .line{
     width: 100%;
     height: 0.15rem;
     background: $primary;
     border-radius: 100vmax;
     &:nth-child(1){
-      transition: transform $transition, margin $transition;
+      transition: width $transition/2, transform $transition/2, margin $transition/2;
       margin-bottom: .25rem;
     }
     &:nth-child(2){
-      transition: width 0s, transform $transition;
+      transition: width 0s, transform $transition/2, margin 0s;
       width: 80%;
+      margin-left: 20%;
     }
   }
-  &:not(.menu-opened){
-    .line{
-      &:nth-child(1){
-        transition-delay: 0s, $transition;
-      }
-      &:nth-child(2){
-        transition-delay: $transition, 0s;
-      }
+
+  &:not(.menu-opened) .line{
+    &:nth-child(1){
+      transition-delay: 0s, 0s, $transition/2;
+    }
+    &:nth-child(2){
+      transition-delay: $transition/2, 0s, $transition/2;
     }
   }
-  &.menu-opened{
-    .line{
-      &:nth-child(1){
-        transform: rotate(-45deg);
-        transition-delay: $transition, 0s;
-        margin-bottom: -0.125rem;
-      }
-      &:nth-child(2){
-        width: 100%;
-        transition-delay: $transition;
-        transform: rotate(45deg);
-      }
+  
+  &.menu-opened .line{
+    width: 80%;
+    &:nth-child(1){
+      transform: rotate(-45deg);
+      transition-delay: $transition/2, $transition/2, 0s;
+      margin-bottom: -0.125rem;
+    }
+    &:nth-child(2){
+      transition-delay: $transition/2;
+      transform: rotate(-135deg);
+      margin: 0;
     }
   }
 }
