Improve mobile menu

--- a/client/src/assets/style/pages/log-in_sign-up/_log-in_sign-up.scss
+++ b/client/src/assets/style/pages/log-in_sign-up/_log-in_sign-up.scss
@@ -52,6 +52,7 @@ main.log-in_sign-up{
 
     button{
       font-size: 1rem;
+      border-radius: 100vmax;
       padding: 1.25rem 1.5rem;
     }
   }
