--- a/client/src/assets/style/ui/_buttons.scss
+++ b/client/src/assets/style/ui/_buttons.scss
@@ -5,7 +5,8 @@ button{
 
 .btn{
   cursor: pointer;
-  border-radius: 100vmax;
+  text-align: center;
+  border-radius: .75rem;
   font-size: .96rem;
   font-weight: 500;
   padding: 1rem 1.75rem;
