--- a/client/src/assets/style/ui/_colors.scss
+++ b/client/src/assets/style/ui/_colors.scss
@@ -1,8 +1,6 @@
 $primary: #273138;
 $error: #E95A45;
 
-.content{
-  background: #FBFCFD;
-}
-
 $border: .0625rem solid #e7e8ec;
+
+.content{ background: #FBFCFD; }
