--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -1,59 +1,41 @@
-.menu-btn{
-  cursor: pointer;
-  position: fixed;
-  top: 2.234375rem; ////
-  right: var(--wrapper-padding-inline);
-  transform: translateY(-50%);
-  z-index: 1000;
-  width: 3rem;
-  height: 3rem;
-  padding: .75rem;
+menu{
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  background: #fff;
+  padding: 0 var(--wrapper-padding-inline);
 
-  .lines-cont{
-    width: 100%;
+  .title{
+    position: relative;
+    top: 2.234375rem; ////
+    transform: translateY(-50%);
+    font-weight: 700;
+  }
+
+  nav{
+    position: absolute;
+    top: 0;
+    width: 45%;
     height: 100%;
     display: flex;
     flex-flow: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .line{
-    width: 100%;
-    height: 0.15rem;
-    background: $primary;
-    border-radius: 100vmax;
-    &:nth-child(1){
-      transition: width $transition/2, transform $transition/2, margin $transition/2;
-      margin-bottom: .25rem;
+    justify-content: space-between;
+    gap: .5rem;
+    padding-block: 7rem 3rem;
+    a{
+      display: block;
+      width: 100%;
     }
-    &:nth-child(2){
-      transition: width 0s, transform $transition/2, margin 0s;
-      width: 80%;
-      margin-left: 20%;
+    ul{
+      a{
+        text-align: left !important;
+        padding-inline: 0 !important;
+      }
     }
-  }
-
-  &:not(.menu-opened) .line{
-    &:nth-child(1){
-      transition-delay: 0s, 0s, $transition/2;
-    }
-    &:nth-child(2){
-      transition-delay: $transition/2, 0s, $transition/2;
-    }
-  }
-  
-  &.menu-opened .line{
-    width: 80%;
-    &:nth-child(1){
-      transform: rotate(-45deg);
-      transition-delay: $transition/2, $transition/2, 0s;
-      margin-bottom: -0.125rem;
-    }
-    &:nth-child(2){
-      transition-delay: $transition/2;
-      transform: rotate(-135deg);
-      margin: 0;
+    .account-btns{
+      display: flex;
+      flex-flow: column;
+      gap: .5rem;
     }
   }
 }
