--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -18,8 +18,12 @@ a {
   color: #273138;
 }
 
+ul, nav {
+  list-style: none;
+}
+
 :root {
-  --wrapper-padding-inline: 1.5rem;
+  --wrapper-padding-inline: 1.8rem;
 }
 
 .wrapper {
@@ -27,14 +31,14 @@ a {
 }
 
 body {
-  background: #fff;
   overflow-y: hidden;
 }
 
 .content {
   overflow-y: auto;
   position: relative;
-  max-height: 100vh;
+  z-index: 2;
+  height: 100vh;
   transition: 0.25s;
 }
 .content.menu-opened {
@@ -51,15 +55,14 @@ body {
 .content.bg-card {
   position: fixed;
   top: 0;
-  z-index: -1000;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background: transparent;
-  transform: scale(0.9);
 }
 .content.bg-card.menu-opened {
   background: rgba(0, 0, 0, 0.04);
-  transform: scale(0.6) translateX(65%);
+  transform: scale(0.63) translateX(64%);
 }
 
 button {
@@ -69,7 +72,8 @@ button {
 
 .btn {
   cursor: pointer;
-  border-radius: 100vmax;
+  text-align: center;
+  border-radius: 0.75rem;
   font-size: 0.96rem;
   font-weight: 500;
   padding: 1rem 1.75rem;
@@ -111,6 +115,44 @@ header .logo {
   font-size: 1.25rem;
   font-weight: 700;
   margin-right: auto;
+}
+
+menu {
+  position: absolute;
+  z-index: 1;
+  inset: 0;
+  background: #fff;
+  padding: 0 var(--wrapper-padding-inline);
+}
+menu .title {
+  position: relative;
+  top: 2.234375rem;
+  transform: translateY(-50%);
+  font-weight: 700;
+}
+menu nav {
+  position: absolute;
+  top: 0;
+  width: 45%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  gap: 0.5rem;
+  padding-block: 7rem 3rem;
+}
+menu nav a {
+  display: block;
+  width: 100%;
+}
+menu nav ul a {
+  text-align: left !important;
+  padding-inline: 0 !important;
+}
+menu nav .account-btns {
+  display: flex;
+  flex-flow: column;
+  gap: 0.5rem;
 }
 
 .menu-btn {
@@ -246,6 +288,7 @@ main.log-in_sign-up form .error-message.hidden {
 }
 main.log-in_sign-up form button {
   font-size: 1rem;
+  border-radius: 100vmax;
   padding: 1.25rem 1.5rem;
 }
 main.log-in_sign-up .sing-up-link {
