--- a/client/src/assets/style/index.scss
+++ b/client/src/assets/style/index.scss
@@ -12,6 +12,7 @@
 @import './ui/inputs';
 @import './components/header';
 @import './components/menu';
+@import './components/menu-btn';
 @import './pages/home/home';
 @import './pages/home/components/post';
 @import './pages/log-in_sign-up/log-in_sign-up';
