--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -16,7 +16,7 @@ menu{
     position: absolute;
     top: 0;
     width: 45%;
-    height: 100%;
+    height: var(--100dvh, 100vh);
     display: flex;
     flex-flow: column;
     justify-content: space-between;
