--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -23,6 +23,7 @@ ul, nav {
 }
 
 :root {
+  --100dvh: 100dvh;
   --wrapper-padding-inline: 1.8rem;
 }
 
@@ -30,16 +31,20 @@ ul, nav {
   padding-inline: var(--wrapper-padding-inline);
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .content {
   overflow-y: auto;
   position: relative;
   z-index: 2;
-  height: 100vh;
-  transition: 0.25s;
+  height: var(--100dvh, 100vh);
+  transition: 0.25s, height 0s;
 }
 .content.menu-opened {
   overflow-y: hidden;
@@ -57,11 +62,10 @@ body {
   top: 0;
   z-index: 1;
   width: 100%;
-  height: 100%;
   background: transparent;
 }
 .content.bg-card.menu-opened {
-  background: rgba(0, 0, 0, 0.04);
+  background: rgba(44, 44, 47, 0.03);
   transform: scale(0.63) translateX(64%);
 }
 
@@ -134,7 +138,7 @@ menu nav {
   position: absolute;
   top: 0;
   width: 45%;
-  height: 100%;
+  height: var(--100dvh, 100vh);
   display: flex;
   flex-flow: column;
   justify-content: space-between;
@@ -165,6 +169,7 @@ menu nav .account-btns {
   width: 3rem;
   height: 3rem;
   padding: 0.75rem;
+  margin-right: -0.75rem;
 }
 .menu-btn .lines-cont {
   width: 100%;
