--- a/client/src/assets/style/ui/_layout.scss
+++ b/client/src/assets/style/ui/_layout.scss
@@ -1,4 +1,5 @@
 :root{
+  --100dvh: 100dvh;
   --wrapper-padding-inline: 1.8rem;
 }
 
@@ -6,16 +7,20 @@
   padding-inline: var(--wrapper-padding-inline);
 }
 
+html{
+  overflow: hidden;
+}
+
 body{
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .content{
   overflow-y: auto;
   position: relative;
   z-index: 2;
-  height: 100vh;
-  transition: $transition;
+  height: var(--100dvh, 100vh);
+  transition: $transition, height 0s;
   &.menu-opened{
     *{ pointer-events: none; }
     overflow-y: hidden;
@@ -28,10 +33,9 @@ body{
     top: 0;
     z-index: 1;
     width: 100%;
-    height: 100%;
     background: transparent;
     &.menu-opened{
-      background: rgb(#000, .04);
+      background: rgb(#2c2c2f, .03);
       transform: scale(.63) translateX(64%);
     }
   }
