--- a/client/src/assets/style/index.scss
+++ b/client/src/assets/style/index.scss
@@ -13,6 +13,7 @@
 @import './components/header';
 @import './components/menu';
 @import './components/menu-btn';
+@import './components/auth';
 @import './pages/home/home';
 @import './pages/home/components/post';
 @import './pages/log-in_sign-up/log-in_sign-up';
