--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+menu {
+  background: #fff;
+}
+
 .content {
   background: #FBFCFD;
 }
@@ -57,6 +61,9 @@ body {
 .content.menu-opened:not(.bg-card) {
   border: 0.0625rem solid #e7e8ec;
 }
+.content.hidden {
+  transform: scale(0.7) translateX(114%);
+}
 .content.bg-card {
   position: fixed;
   top: 0;
@@ -67,6 +74,9 @@ body {
 .content.bg-card.menu-opened {
   background: rgba(44, 44, 47, 0.03);
   transform: scale(0.63) translateX(64%);
+}
+.content.bg-card.hidden {
+  transform: scale(0.63) translateX(114%);
 }
 
 button {
@@ -125,7 +135,6 @@ menu {
   position: absolute;
   z-index: 1;
   inset: 0;
-  background: #fff;
   padding: 0 var(--wrapper-padding-inline);
 }
 menu .title {
@@ -143,14 +152,18 @@ menu nav {
   flex-flow: column;
   justify-content: space-between;
   gap: 0.5rem;
+  transition: 0.25s;
   padding-block: 7rem 3rem;
 }
+menu nav.logging-in {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(10%);
+}
 menu nav a {
+  text-align: left !important;
   display: block;
   width: 100%;
-}
-menu nav ul a {
-  text-align: left !important;
   padding-inline: 0 !important;
 }
 menu nav .account-btns {
@@ -212,6 +225,53 @@ menu nav .account-btns {
   transition-delay: 0.125s;
   transform: rotate(-135deg);
   margin: 0;
+}
+
+.auth {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: var(--wrapper-padding-inline);
+  right: 17%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  transition: 0.25s;
+}
+.auth:not(.shown) {
+  visibility: hidden;
+  opacity: 0;
+  transform: translateX(-10%);
+}
+.auth .title {
+  font-size: 2rem;
+  font-weight: 700;
+  padding-bottom: 2rem;
+}
+.auth form {
+  display: grid;
+  gap: 1rem;
+}
+.auth form .error-message {
+  color: #E95A45;
+  font-size: 0.9rem;
+}
+.auth form .error-message.hidden {
+  display: none;
+}
+.auth form button {
+  font-size: 1rem;
+  border-radius: 100vmax;
+  padding: 1.25rem 1.5rem;
+}
+.auth .bottom-link {
+  text-align: center;
+  padding-block: 1rem;
+}
+.auth .bottom-link .link {
+  cursor: pointer;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
 main.home .posts {
