Improve menu opening animation

--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -2,7 +2,13 @@ menu{
   position: absolute;
   z-index: 1;
   inset: 0;
+  transition: $transition;
   padding: 0 var(--wrapper-padding-inline);
+  &:not(.menu-opened){
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(-10%);
+  }
 
   .title{
     position: relative;
