--- a/client/src/assets/style/ui/_colors.scss
+++ b/client/src/assets/style/ui/_colors.scss
@@ -4,4 +4,4 @@ $error: #E95A45;
 $border: .0625rem solid #e7e8ec;
 
 menu{ background: #fff; }
-.content{ background: #FBFCFD; }
+header, .content{ background: #FBFCFD; }
