--- a/client/src/assets/style/components/_menu-btn.scss
+++ b/client/src/assets/style/components/_menu-btn.scss
@@ -1,7 +1,7 @@
 .menu-btn{
   cursor: pointer;
   position: fixed;
-  top: 2.234375rem; ////
+  top: 2.265625rem; ////
   right: var(--wrapper-padding-inline);
   transform: translateY(-50%);
   z-index: 1000;
@@ -11,6 +11,7 @@
   margin-right: -0.75rem;
 
   .lines-cont{
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -33,28 +34,50 @@
       width: 80%;
       margin-left: 20%;
     }
+    &:nth-child(3){
+      opacity: 0;
+      position: absolute;
+      transition: opacity 0s, width 0s, transform $transition/2;
+      transition-delay: $transition/2, $transition/2, $transition/2; // opacity, width, transform
+    }
   }
 
   &:not(.menu-opened) .line{
-    &:nth-child(1){
-      transition-delay: 0s, 0s, $transition/2;
-    }
-    &:nth-child(2){
-      transition-delay: $transition/2, 0s, $transition/2;
-    }
+    &:nth-child(1){ transition-delay: 0s, 0s, $transition/2; }
+    &:nth-child(2){ transition-delay: $transition/2, 0s, $transition/2; }
   }
   
   &.menu-opened .line{
     width: 80%;
     &:nth-child(1){
       transform: rotate(-45deg);
-      transition-delay: $transition/2, $transition/2, 0s;
+      transition-delay: $transition/2, $transition/2, 0s; // width, transform, margin
       margin-bottom: -0.125rem;
     }
     &:nth-child(2){
-      transition-delay: $transition/2;
+      transition-delay: $transition/2; // width
       transform: rotate(-135deg);
       margin: 0;
+    }
+  }
+
+  &.back .line{
+    &:nth-child(1){
+      transition: width $transition/2, transform $transition/2;
+      transition-delay: 0s, $transition/2; // width, transform
+      transform: rotate(0deg);
+    }
+    &:nth-child(2){
+      width: 40%;
+      transition: width 0s, transform $transition/2;
+      transition-delay: $transition/1.65, $transition/2; // width, transform
+      transform: translate(-0.37rem, -0.2rem) rotate(-225deg);
+    }
+    &:nth-child(3){
+      opacity: 1;
+      width: 40%;
+      transition-delay: $transition/1.65, $transition/2, $transition/2; // opacity, width, transform
+      transform: translate(-0.37rem, .17rem) rotate(45deg);
     }
   }
 }
