--- a/client/src/assets/style/ui/_layout.scss
+++ b/client/src/assets/style/ui/_layout.scss
@@ -21,6 +21,7 @@ body{
   z-index: 2;
   height: var(--100dvh, 100vh);
   transition: $transition, height 0s;
+  padding-block: 4.53125rem;
   &.menu-opened{
     *{ pointer-events: none; }
     overflow-y: hidden;
