--- a/client/src/assets/style/components/_menu-btn.scss
+++ b/client/src/assets/style/components/_menu-btn.scss
@@ -49,6 +49,7 @@
   
   &.menu-opened .line{
     width: 80%;
+    background: #fff;
     &:nth-child(1){
       transform: rotate(-45deg);
       transition-delay: $transition/2, $transition/2, 0s; // width, transform, margin
