--- a/client/src/assets/style/ui/_colors.scss
+++ b/client/src/assets/style/ui/_colors.scss
@@ -3,5 +3,6 @@ $error: #E95A45;
 
 $border: .0625rem solid #e7e8ec;
 
-menu{ background: #fff; }
+body{ background: $primary; }
+
 header, .content{ background: #FBFCFD; }
