--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -5,7 +5,7 @@ menu{
   color: #fff;
   transition: $transition;
   padding: 0 var(--wrapper-padding-inline);
-  &:not(.menu-opened){
+  &.hidden{
     visibility: hidden;
     opacity: 0;
     transform: translateX(-10%);
@@ -13,9 +13,29 @@ menu{
 
   .title{
     position: relative;
+    z-index: 1000;
     top: 2.234375rem; ////
     transform: translateY(-50%);
     font-weight: 700;
+    span{
+      transition: $transition;
+      &.hidden{
+        opacity: 0;
+        visibility: hidden;
+        transform: translateX(1rem);
+      }
+      &.auth-title{
+        cursor: pointer;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        gap: .25rem;
+        padding: .75rem;
+        margin: -0.75rem;
+        &.hidden{ transform: translateX(-1rem); }
+        svg{ stroke-width: .16rem; }
+      }
+    }
   }
 
   nav{
