--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #273138;
+  background: #171717;
 }
 
 header, .content {
@@ -14,12 +14,12 @@ header, .content {
 
 body, button, input {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #273138;
+  color: #171717;
 }
 
 a {
   text-decoration: none;
-  color: #273138;
+  color: #171717;
 }
 
 ul, nav {
@@ -70,7 +70,7 @@ body {
   background: transparent;
 }
 .content.bg-card.menu-opened {
-  background: #3c4b56;
+  background: #313131;
   transform: scale(0.63) translateX(64%);
 }
 .content.bg-card.hidden {
@@ -91,7 +91,7 @@ button {
   padding: 1rem 1.75rem;
 }
 .btn:not(.outline, .transparent, .white) {
-  background: #273138;
+  background: #171717;
   color: #fff;
 }
 .btn.white {
@@ -151,16 +151,40 @@ menu {
   transition: 0.25s;
   padding: 0 var(--wrapper-padding-inline);
 }
-menu:not(.menu-opened) {
+menu.hidden {
   visibility: hidden;
   opacity: 0;
   transform: translateX(-10%);
 }
 menu .title {
   position: relative;
+  z-index: 1000;
   top: 2.234375rem;
   transform: translateY(-50%);
   font-weight: 700;
+}
+menu .title span {
+  transition: 0.25s;
+}
+menu .title span.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(1rem);
+}
+menu .title span.auth-title {
+  cursor: pointer;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  padding: 0.75rem;
+  margin: -0.75rem;
+}
+menu .title span.auth-title.hidden {
+  transform: translateX(-1rem);
+}
+menu .title span.auth-title svg {
+  stroke-width: 0.16rem;
 }
 menu nav {
   position: absolute;
@@ -219,7 +243,7 @@ menu nav .account-btns button.transparent {
 .menu-btn .line {
   width: 100%;
   height: 0.15rem;
-  background: #273138;
+  background: #171717;
   border-radius: 100vmax;
 }
 .menu-btn .line:nth-child(1) {
@@ -257,23 +281,6 @@ menu nav .account-btns button.transparent {
   transform: rotate(-135deg);
   margin: 0;
 }
-.menu-btn.back .line:nth-child(1) {
-  transition: width 0.125s, transform 0.125s;
-  transition-delay: 0s, 0.125s;
-  transform: rotate(0deg);
-}
-.menu-btn.back .line:nth-child(2) {
-  width: 40%;
-  transition: width 0s, transform 0.125s;
-  transition-delay: 0.1515151515s, 0.125s;
-  transform: translate(-0.37rem, -0.2rem) rotate(-225deg);
-}
-.menu-btn.back .line:nth-child(3) {
-  opacity: 1;
-  width: 40%;
-  transition-delay: 0.1515151515s, 0.125s, 0.125s;
-  transform: translate(-0.37rem, 0.17rem) rotate(45deg);
-}
 
 .auth {
   position: absolute;
@@ -301,7 +308,7 @@ menu nav .account-btns button.transparent {
   gap: 1rem;
 }
 .auth form input {
-  background: #313e47;
+  background: #242424;
   color: #fff;
   border: none;
 }
@@ -355,6 +362,24 @@ main.home .post .title {
   font-weight: 700;
   margin-bottom: 0.5rem;
 }
+main.home .post.highlight {
+  width: 100%;
+  max-height: 20rem;
+  aspect-ratio: 1/1;
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  color: #fff;
+  background: url("https://images.unsplash.com/photo-1533134486753-c833f0ed4866?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80");
+  background-size: cover;
+  background-position: center;
+  background-color: #171717;
+  border: none;
+}
+main.home .post.highlight .title {
+  font-size: 2.5rem;
+  margin: 0;
+}
 
 main.log-in_sign-up .title {
   text-align: center;
@@ -398,7 +423,7 @@ main.log-in_sign-up form .not-a-robot input[type=checkbox] {
   pointer-events: none;
 }
 main.log-in_sign-up form .not-a-robot input[type=checkbox]:checked + label .checkbox::before {
-  background: #273138;
+  background: #171717;
 }
 main.log-in_sign-up form .not-a-robot input[type=checkbox]:focus-visible + label .checkbox {
   outline: auto;
