--- a/client/src/assets/style/pages/home/components/_post.scss
+++ b/client/src/assets/style/pages/home/components/_post.scss
@@ -17,5 +17,24 @@ main.home{
       font-weight: 700;
       margin-bottom: .5rem;
     }
+
+    &.highlight{
+      width: 100%;
+      max-height: 20rem;
+      aspect-ratio: 1/1;
+      display: flex;
+      flex-flow: column;
+      justify-content: flex-end;
+      color: #fff;
+      background: url("https://images.unsplash.com/photo-1533134486753-c833f0ed4866?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80");
+      background-size: cover;
+      background-position: center;
+      background-color: $primary;
+      border: none;
+      .title{
+        font-size: 2.5rem;
+        margin: 0;
+      }
+    }
   }
 }
