--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -13,11 +13,11 @@ menu{
 
   .title{
     position: relative;
-    z-index: 1000;
     top: 2.234375rem; ////
     transform: translateY(-50%);
-    font-weight: 700;
-    span{
+    button{
+      color: #fff;
+      font-weight: 700;
       transition: $transition;
       &.hidden{
         opacity: 0;
