Improve logging in

--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -54,18 +54,28 @@ menu{
       opacity: 0;
       transform: translateX(10%);
     }
-    a{
-      text-align: left !important;
-      display: block;
-      width: 100%;
-      color: #fff;
-      padding-inline: 0 !important;
+    ul{
+      a{
+        text-align: left !important;
+        display: block;
+        width: 100%;
+        color: #fff;
+        padding-inline: 0 !important;
+      }
     }
     .account-btns{
       display: flex;
       flex-flow: column;
       gap: .5rem;
       button.transparent{ color: #fff; }
+      .btn.profile{
+        display: flex;
+        align-items: center;
+        gap: .5rem;
+        text-align: left;
+        background: lighten($primary, 3);
+        svg{ flex-shrink: 0; }
+      }
     }
   }
 }
