--- a/client/src/assets/style/components/_auth.scss
+++ b/client/src/assets/style/components/_auth.scss
@@ -29,7 +29,7 @@
       background: lighten($primary, 5);
       color: #fff;
       border-color: transparent;
-      &::placeholder{ color: #fff; }
+      &::placeholder{ color: lighten($primary, 35); }
     }
 
     .error-message{
