--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -11,7 +11,7 @@ menu{
     transform: translateX(-10%);
   }
 
-  .title{
+  & > .title{
     position: relative;
     top: 2.234375rem; ////
     transform: translateY(-50%);
