--- a/client/src/assets/style/ui/_buttons.scss
+++ b/client/src/assets/style/ui/_buttons.scss
@@ -7,7 +7,7 @@ button{
 .btn{
   cursor: pointer;
   text-align: center;
-  border-radius: .75rem;
+  border-radius: $border-radius;
   font-size: .96rem;
   font-weight: 500;
   padding: 1rem 1.75rem;
