--- a/client/src/assets/style/components/_menu.scss
+++ b/client/src/assets/style/components/_menu.scss
@@ -32,7 +32,10 @@ menu{
         gap: .25rem;
         padding: .75rem;
         margin: -0.75rem;
-        &.hidden{ transform: translateX(-1rem); }
+        &.hidden{
+          transform: translateX(-1rem);
+          &.secondary{ transform: translateX(1rem); }
+        }
         svg{ stroke-width: .16rem; }
       }
     }
