--- a/client/src/assets/style/ui/_inputs.scss
+++ b/client/src/assets/style/ui/_inputs.scss
@@ -1,5 +1,5 @@
 input{
-  &[type=text], &[type=password]{
+  &[type=text], &[type=number], &[type=email], &[type=password]{
     font-size: 1rem;
     border: $border;
     border-radius: $border-radius;
