--- a/client/src/assets/style/components/menu/_menu.scss
+++ b/client/src/assets/style/components/menu/_menu.scss
@@ -76,6 +76,8 @@ menu{
         align-items: center;
         gap: .5rem;
         text-align: left;
+        padding: .5rem;
+        margin: -0.5rem;
         span{
           overflow: hidden;
           white-space: nowrap;
