--- a/client/src/assets/style/ui/_buttons.scss
+++ b/client/src/assets/style/ui/_buttons.scss
@@ -1,4 +1,5 @@
 button{
+  cursor: pointer;
   font-size: 1rem;
   background: none;
   border: none;
@@ -16,9 +17,11 @@ button{
     color: #fff;
   }
   &.white{
-    background: #fff;
+    &:not(.outline, .transparent){ background: #fff; }
+    &.transparent{ color: #fff; }
   }
   &.outline{
-    border: $border;
+    color: #fff;
+    box-shadow: inset 0 0 0 .125rem #fff;
   }
 }
