Add profile editing

--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -92,24 +92,38 @@ button {
 .btn {
   cursor: pointer;
   text-align: center;
-  border-radius: 0.75rem;
+  color: #fff;
   font-size: 0.96rem;
   font-weight: 500;
+  border-radius: 0.75rem;
   padding: 1rem 1.75rem;
 }
-.btn:not(.outline, .transparent, .white) {
+.btn:not(.outline, .transparent) {
   background: #171717;
-  color: #fff;
+}
+.btn.outline, .btn.transparent, .btn.white {
+  color: #171717;
+}
+.btn.outline {
+  box-shadow: inset 0 0 0 0.125rem #171717;
 }
 .btn.white:not(.outline, .transparent) {
   background: #fff;
 }
-.btn.white.transparent {
+.btn.white.outline, .btn.white.transparent {
   color: #fff;
 }
-.btn.outline {
-  color: #fff;
+.btn.white.outline {
   box-shadow: inset 0 0 0 0.125rem #fff;
+}
+.btn.red:not(.outline, .transparent) {
+  background: #E95A45;
+}
+.btn.red.outline, .btn.red.transparent {
+  color: #E95A45;
+}
+.btn.red.outline {
+  box-shadow: inset 0 0 0 0.125rem #E95A45;
 }
 
 input[type=text], input[type=number], input[type=email], input[type=password] {
@@ -137,6 +151,14 @@ input[type=text].primary::placeholder, input[type=number].primary::placeholder, 
 }
 input[type=text].error, input[type=number].error, input[type=email].error, input[type=password].error {
   border-color: #E95A45 !important;
+}
+
+.error-message {
+  color: #E95A45;
+  font-size: 0.9rem;
+}
+.error-message.hidden {
+  display: none;
 }
 
 header {
@@ -228,7 +250,6 @@ menu nav ul a {
   text-align: left !important;
   display: block;
   width: 100%;
-  color: #fff;
   padding-inline: 0 !important;
 }
 menu nav .account-btns {
@@ -365,13 +386,6 @@ menu nav .account-btns .profile .pfp svg path {
   display: grid;
   gap: 1rem;
 }
-.auth form .error-message {
-  color: #E95A45;
-  font-size: 0.9rem;
-}
-.auth form .error-message.hidden {
-  display: none;
-}
 .auth form .btn.submit {
   font-size: 1rem;
   padding: 1.25rem 1.5rem;
@@ -393,9 +407,7 @@ menu nav .account-btns .profile .pfp svg path {
   transform: translate(0, -50%);
   left: var(--wrapper-padding-inline);
   right: 17%;
-  display: flex;
-  flex-flow: column;
-  gap: 1rem;
+  display: grid;
   transition: 0.25s;
 }
 .profile-settings.hidden {
@@ -408,6 +420,7 @@ menu nav .account-btns .profile .pfp svg path {
 }
 .profile-settings label {
   font-weight: 500;
+  line-height: 3;
 }
 .profile-settings .pfp-cont {
   position: relative;
@@ -434,6 +447,19 @@ menu nav .account-btns .profile .pfp svg path {
   background: #313131;
   border-radius: 50%;
   padding: 0.75rem;
+}
+.profile-settings .inputs {
+  display: grid;
+  margin-bottom: 1rem;
+}
+.profile-settings .inputs input {
+  margin-bottom: 0.25rem;
+}
+.profile-settings .buttons {
+  display: grid;
+}
+.profile-settings .buttons .btn:first-child {
+  margin-bottom: 0.5rem;
 }
 
 main.home .posts {
