--- a/client/src/assets/style/components/menu/_editing_profile.scss
+++ b/client/src/assets/style/components/menu/_editing_profile.scss
@@ -4,9 +4,7 @@
   transform: translate(0, -50%);
   left: var(--wrapper-padding-inline);
   right: 17%;
-  display: flex;
-  flex-flow: column;
-  gap: 1rem;
+  display: grid;
   transition: $transition;
   &.hidden{
     visibility: hidden;
@@ -17,6 +15,7 @@
 
   label{
     font-weight: 500;
+    line-height: 3;
   }
 
   .pfp-cont{
@@ -40,5 +39,18 @@
       border-radius: 50%;
       padding: .75rem;
     }
+  }
+
+  .inputs{
+    display: grid;
+    margin-bottom: 1rem;
+    input{
+      margin-bottom: .25rem;
+    }
+  }
+
+  .buttons{
+    display: grid;
+    .btn:first-child{ margin-bottom: .5rem; }
   }
 }
