--- a/client/src/assets/style/ui/_buttons.scss
+++ b/client/src/assets/style/ui/_buttons.scss
@@ -8,20 +8,24 @@ button{
 .btn{
   cursor: pointer;
   text-align: center;
-  border-radius: $border-radius;
+  color: #fff;
   font-size: .96rem;
   font-weight: 500;
+  border-radius: $border-radius;
   padding: 1rem 1.75rem;
-  &:not(.outline, .transparent, .white){
-    background: $primary;
-    color: #fff;
-  }
+  &:not(.outline, .transparent){ background: $primary; }
+  &.outline, &.transparent, &.white{ color: $primary; }
+  &.outline{ box-shadow: inset 0 0 0 .125rem $primary; }
+
   &.white{
     &:not(.outline, .transparent){ background: #fff; }
-    &.transparent{ color: #fff; }
+    &.outline, &.transparent{ color: #fff; }
+    &.outline{ box-shadow: inset 0 0 0 .125rem #fff; }
   }
-  &.outline{
-    color: #fff;
-    box-shadow: inset 0 0 0 .125rem #fff;
+
+  &.red{
+    &:not(.outline, .transparent){ background: #E95A45; }
+    &.outline, &.transparent{ color: #E95A45; }
+    &.outline{ box-shadow: inset 0 0 0 .125rem #E95A45; }
   }
 }
