--- a/client/src/assets/style/ui/_buttons.scss
+++ b/client/src/assets/style/ui/_buttons.scss
@@ -11,8 +11,9 @@ button{
   color: #fff;
   font-size: .96rem;
   font-weight: 500;
-  border-radius: $border-radius;
-  padding: 1rem 1.75rem;
+  border-radius: 100vmax;
+  // border-radius: $border-radius;
+  padding: 1.1rem 1.75rem;
   &:not(.outline, .transparent){ background: $primary; }
   &.outline, &.transparent, &.white{ color: $primary; }
   &.outline{ box-shadow: inset 0 0 0 .125rem $primary; }
